kubernetes/kube-prod-d1/mimir/prod-d1/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: mimir
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: mimir-minio.kube-prod-d1.mclacken.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio
                port:
                  name: http-minio
    - host: mimir-minio-console.kube-prod-d1.mclacken.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mimir-bucket-console
                port:
                  name: http-console
  tls:
    - hosts:
        - mimir-minio.kube-prod-d1.mclacken.net
        - mimir-minio-console.kube-prod-d1.mclacken.net
      secretName: tenant-certificate-secret
